# Open-CV

./: README.md
Project/: CMakeLists.txt  CMakelists_czf.txt
Project/inc/: resize.h  resize_czf.h
Project/src/: main.cpp  main_simd.cpp  resize.cpp  resize_czf.cpp
report/: Report.md
